--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,1 @@
-/*pluginRepositories {
-    maven {
-        url 'https://artifactory.io.thehut.local:443/artifactory/plugins-release'
-    }
-    gradlePluginPortal()
-}*/
+rootProject.name = 'fuzzyduck'
