--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ artifactory {
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
+      from components.java
 			artifact jar
 		}
 	}
