--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,38 @@ buildscript {
 	apply from: 'https://artifactory.io.thehut.local:443/artifactory/plugins-release-local/thg/thg-gradle-plugin/1.0.0/thg-gradle-plugin-1.0.0.gradle', to: buildscript
 }
 
+plugins {
+  id "com.adarshr.test-logger" version "1.4.0"
+}
+
 apply plugin: 'com.thehut.thg-gradle-plugin'
+apply plugin: 'java'
+
+ext {
+  findbugsVersion = '3.0.1'
+  hamcrestVersion = '1.3'
+  junitJupiterVersion = '5.2.0'
+  junitPlatformVersion = '1.2.0'
+  mockitoVersion = '2.21.0'
+  //themisTestingAsyncVersion = '1.2.0'
+  //themisTestingMatchersVersion = '1.2.0'
+}
 
 dependencies {
-	testCompile 'junit:junit:4.12'
+
+  //FindBugs annotations (@SuppressFBWarnings)
+  compile("com.google.code.findbugs:annotations:${findbugsVersion}")
+  compile("com.google.code.findbugs:jsr305:${findbugsVersion}")
+
+  //Unit testing
+  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
+  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
+  testCompile("org.hamcrest:hamcrest-all:${hamcrestVersion}")
+  testCompile("org.mockito:mockito-core:${mockitoVersion}")
+  //testCompile("com.thehutgroup:testingasync:${themisTestingAsyncVersion}")
+  //testCompile("com.thehutgroup:testing-matchers:${themisTestingMatchersVersion}")
 }
+
 
 artifactory {
 	publish {
@@ -23,4 +50,31 @@ publishing {
 			artifact jar
 		}
 	}
+}
+
+test {
+  useJUnitPlatform()
+}
+
+checkstyle {
+  toolVersion = "7.8"
+}
+
+findbugsMain {
+  reportLevel = 'low'
+}
+
+findbugsTest {
+  reportLevel = 'medium'
+}
+
+tasks.withType(FindBugs) {
+  pluginClasspath = project.configurations.findbugsPlugins
+  excludeFilter = file("findBugsExcludes.xml")
+
+  reports {
+    xml.enabled = false
+    html.enabled = true
+  }
+  ignoreFailures = false
 }
