--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ apply plugin: 'com.thehut.thg-gradle-plugin'
 apply plugin: 'java'
 
 ext {
+  commonsDbUtilsVersion = '1.7'
   findbugsVersion = '3.0.1'
   hamcrestVersion = '1.3'
   junitJupiterVersion = '5.2.0'
@@ -20,6 +21,9 @@ ext {
 }
 
 dependencies {
+
+  // Database Utils
+  compile("commons-dbutils:commons-dbutils:${commonsDbUtilsVersion}")
 
   //FindBugs annotations (@SuppressFBWarnings)
   compile("com.google.code.findbugs:annotations:${findbugsVersion}")
