--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,34 @@
 buildscript {
-	apply from: 'https://artifactory.io.thehut.local:443/artifactory/plugins-release-local/thg/thg-gradle-plugin/1.0.0/thg-gradle-plugin-1.0.0.gradle', to: buildscript
+  repositories {
+    maven {
+      url uri('https://artifactory.io.thehut.local/artifactory/plugins-release')
+    }
+    mavenCentral()
+  }
+
+  dependencies {
+    classpath('thg:thg-gradle-plugin:2.1.+')
+  }
 }
 
 plugins {
-  id "com.adarshr.test-logger" version "1.4.0"
+  id "com.adarshr.test-logger" version "2.0.0"
 }
 
 apply plugin: 'com.thehut.thg-gradle-plugin'
 apply plugin: 'java'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 ext {
   commonsDbUtilsVersion = '1.7'
-  findbugsVersion = '3.0.1'
-  h2DatabaseVersion = '1.4.197'
-  hamcrestVersion = '1.3'
-  hikariVersion = '2.7.4'
-  junitJupiterVersion = '5.2.0'
-  junitPlatformVersion = '1.2.0'
-  mockitoVersion = '2.21.0'
-  //themisTestingAsyncVersion = '1.2.0'
-  //themisTestingMatchersVersion = '1.2.0'
+  engagementCheckstyleVersion = '1.2.1'
+  h2DatabaseVersion = '1.4.200'
+  hamcrestVersion = '2.2'
+  hikariVersion = '3.4.1'
+  junitJupiterVersion = '5.5.2'
+  mockitoVersion = '3.1.0'
+  spotbugsAnnotationsVersion = '3.1.12'
 }
 
 dependencies {
@@ -28,16 +37,13 @@ dependencies {
   compile("commons-dbutils:commons-dbutils:${commonsDbUtilsVersion}")
 
   //FindBugs annotations (@SuppressFBWarnings)
-  compile("com.google.code.findbugs:annotations:${findbugsVersion}")
-  compile("com.google.code.findbugs:jsr305:${findbugsVersion}")
+  compile("com.github.spotbugs:spotbugs-annotations:${spotbugsAnnotationsVersion}")
 
   //Unit testing
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
-  testCompile("org.hamcrest:hamcrest-all:${hamcrestVersion}")
+  testCompile("org.hamcrest:hamcrest:${hamcrestVersion}")
   compile("org.mockito:mockito-core:${mockitoVersion}")
-  //testCompile("com.thehutgroup:testingasync:${themisTestingAsyncVersion}")
-  //testCompile("com.thehutgroup:testing-matchers:${themisTestingMatchersVersion}")
 
   //Test database
   testCompile("com.h2database:h2:${h2DatabaseVersion}")
@@ -66,25 +72,11 @@ test {
   useJUnitPlatform()
 }
 
-checkstyle {
-  toolVersion = "7.8"
-}
-
-findbugsMain {
+spotbugsMain {
   reportLevel = 'low'
 }
 
-findbugsTest {
+spotbugsTest {
   reportLevel = 'medium'
 }
 
-tasks.withType(FindBugs) {
-  pluginClasspath = project.configurations.findbugsPlugins
-  excludeFilter = file("findBugsExcludes.xml")
-
-  reports {
-    xml.enabled = false
-    html.enabled = true
-  }
-  ignoreFailures = false
-}
