--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
   }
 
   dependencies {
-    classpath('thg:thg-gradle-plugin:2.1.12')
+    classpath('thg:thg-gradle-plugin:2.1.+')
   }
 }
 
