--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+default:
+  image: artifactory.io.thehut.local:5000/engagement-vertical/nvd-database:latest
+
 check:
   script:
     - ./gradlew --no-daemon --refresh-dependencies clean check
@@ -7,8 +10,20 @@ check:
       - build/reports/spotbugs/*.html
     reports:
       junit: build/test-results/test/*.xml
+      codequality: build/reports/thg/gitlab-report.json
   only:
     - merge_requests
+
+# This is done so that on master, a clean report can be compared on MR
+clean-code-climate:
+  stage: test
+  script:
+    echo "[]" > gitlab-report.json
+  artifacts:
+    reports:
+      codequality: gitlab-report.json
+  only:
+    - master
 
 release:
   image: artifactory.io.thehut.local:5000/adoptopenjdk/openjdk11-openj9:jdk-11.0.3_7_openj9-0.14.3-alpine.20190821.0000
