--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
   id "com.adarshr.test-logger" version "2.0.0"
 }
 
+apply plugin: 'java'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
