--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,24 @@ dependencies {
   testImplementation("com.zaxxer:HikariCP:${hikariVersion}")
 }
 
+publishing {
+  repositories {
+    maven {
+      name = "GitHubPackages"
+      url = "https://maven.pkg.github.com/OpenSource-THG/queryrunnerstreams"
+      credentials {
+        username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+        password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+      }
+    }
+  }
+  publications {
+    gpr(MavenPublication) {
+      from(components.java)
+    }
+  }
+}
+
 test {
   useJUnitPlatform()
 }
